--- a/css/aboutMe-styles.css
+++ b/css/aboutMe-styles.css
@@ -31,18 +31,25 @@ body {
     margin-bottom: 0.5em;
 }
 .right-panel p {
-    color: #666;
+    color: white;
     line-height: 1.6;
 }
 .skills, .experience, .education {
     margin: 1em 0;
 }
 .skills h2, .experience h2, .education h2 {
-    color: #007bff;
-    border-bottom: 2px solid #007bff;
+    color: black;
+    border-bottom: 2px solid black;
 }
 
 .education li {
     margin-bottom: 15px; /* Adjust the value as needed */
+}
+
+#logo{
+    margin: 50%;
+    margin-left: 5%;
+    height: 300px;
+    position: relative;
 }
 
