--- a/css/aboutMe-styles.css
+++ b/css/aboutMe-styles.css
@@ -2,7 +2,7 @@ body {
     font-family: 'Arial', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: white !important;
+    background-color: #082541 !important;
 }
 
 .navbar {
@@ -11,7 +11,7 @@ body {
 
 .container {
     width: 80%;
-    background: white;
+    background: #E6E6FA;
     border-radius: 8px;
     overflow: hidden;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -65,4 +65,35 @@ body {
     margin-top: 25vh;
     width: 300px;
     padding-right: 10%;
+}
+
+#three-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+/* Centering the navbar */
+.navbar-nav {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.navbar-collapse {
+    justify-content: center;
+}
+
+/* Custom Navbar Styles */
+.navbar-nav .nav-item .nav-link {
+    color: black !important; /* White color for font */
+    font-size: 34px; /* Increased font size */
+    margin-right: 20px; /* Space between items */
+}
+
+/* Transparent navbar background */
+.navbar-transparent {
+    background: transparent !important;
+    box-shadow: none;
 }
