laid out the basics for my projects page

--- a/css/projects-styles.css
+++ b/css/projects-styles.css
@@ -21,7 +21,7 @@ body {
     justify-content: center; /* Center items vertically */
     margin: 0 auto; /* Horizontal centering */
     text-align: center;
-    margin-top: 2%;
+    margin-top: -10cqi;
 }
 
 .left-panel {
