--- a/css/styles.css
+++ b/css/styles.css
@@ -15,15 +15,15 @@ body, html {
 
 .overlay-text {
     position: absolute;
-    top: 20px; /* Adjust as needed */
-    left: 20px; /* Adjust as needed */
-    color: white; /* Choose a color that contrasts with your scene */
-    font-size: 24px; /* Adjust as needed */
-    z-index: 100; /* Ensure it's above the canvas */
+    top: 20px; 
+    left: 20px;
+    color: white; 
+    font-size: 24px;
+    z-index: 100;
     display: flex;
     color: redwhite;
 }
-/* Centering the navbar */
+
 .navbar-nav {
     margin-left: auto;
     margin-right: auto;
@@ -33,14 +33,12 @@ body, html {
     justify-content: center;
 }
 
-/* Custom Navbar Styles */
 .navbar-nav .nav-item .nav-link {
-    color: white !important; /* White color for font */
-    font-size: 34px; /* Increased font size */
-    margin-right: 20px; /* Space between items */
+    color: white !important;
+    font-size: 34px; 
+    margin-right: 20px; 
 }
 
-/* Transparent navbar background */
 .navbar-transparent {
     background: transparent !important;
     box-shadow: none;
@@ -49,8 +47,8 @@ body, html {
 .intro-text {
     position: absolute;
     left: 20px;
-    top: 40%; /* Set the top position to 50% of the viewport height */
-    transform: translateY(-50%); /* Adjust for the height of the element itself */
+    top: 40%; 
+    transform: translateY(-50%); 
     color: white;
     font-size: 64px;
     z-index: 10;
@@ -61,13 +59,13 @@ body, html {
 .social-links{
     position: absolute;
     left: 20px;
-    top: 75%; /* Adjust this value as needed */
+    top: 75%;
     transform: translateY(-50%);
-    color: white; /* Icon color */
-    font-size: 24px; /* Icon size */
+    color: white;
+    font-size: 24px; 
     z-index: 10;
     padding: 4.3%;
-    display: inline-block; /* Display links on the same line */
+    display: inline-block; 
 }
 
 .logo{
@@ -87,29 +85,29 @@ body, html {
 }
 
 .social-links a {
-    color: #3F1D38; /* Icon color */
-    font-size: 40px; /* Icon size */
-    margin-right: 20px; /* Space between icons */
-    display: inline-block; /* Display links on the same line */
+    color: #3F1D38;
+    font-size: 40px;
+    margin-right: 20px;
+    display: inline-block;
     transition: color 0.3s;
 }
 
 .summary{
     position: absolute;
     left: 20px;
-    top: 60%; /* Adjust this value as needed */
+    top: 60%;
     transform: translateY(-50%);
-    color: #E3651D; /* Icon color */
-    font-size: 34px; /* Icon size */
+    color: #E3651D;
+    font-size: 34px;
     z-index: 10;
     padding: 4.3%;
-    display: inline-block; /* Display links on the same line */
+    display: inline-block;
 }
 
 
 .summary a{
     text-decoration: none;
-    color: #E3651D; /* Icon color */
+    color: #E3651D; 
 }
 
 .summary a:hover{
