--- a/css/styles.css
+++ b/css/styles.css
@@ -93,7 +93,7 @@ body, html {
 }
 
 .summary{
-    position: absolute;
+    position: fixed;
     left: 20px;
     top: 60%;
     transform: translateY(-50%);
@@ -115,6 +115,7 @@ body, html {
 }
 
 #name {
+
     color: #F4DFC8;
 }
 
